--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@slack/bolt": "^3.9.0",
-    "mongoose": "^6.2.0"
+    "mongoose": "^6.2.0",
+    "node-cron": "^3.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
